# mechanicalmind-ai-learning

./: README.md  install.sh  requirements.txt  setup.cfg  setup.py
scripts/: cli.py  mechmind_cli.py
src/mechanicalmind_ai/core/: __init__.py  analyzer.py
