[metadata]
name = mechanicalmind-ai-learning
version = 0.1.0
description = Sistema de gestión de dependencias con IA - Versión aprendizaje
author = mechmind-dwv
author_email = ia.mechmind@gmail.com

[options]
packages = find:
install_requires =
    click>=8.0.0
    requests>=2.25.0

[options.entry_points]
console_scripts =
    mechmind = scripts.mechmind_cli:cli
